--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-<h1>Terpea Roxana Amalia</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Terpea Roxana, Psiholog</title>
+    <style>
+        /* Set the background color for the page */
+        body {
+            background-color: #bdc3c7;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        /* Center the image vertically and horizontally */
+        .logo-container {
+            text-align: center;
+        }
+
+        .logo-container img {
+            max-width: 100%;
+            height: auto;
+        }
+    </style>
+</head>
+<body>
+    <div class="logo-container">
+        <img src="logo.png" alt="Logo">
+    </div>
+</body>
+</html>
